--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,8 @@
   
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>1.7</maven.compiler.source>
+    <maven.compiler.target>1.7</maven.compiler.target>
   </properties>
   
   <dependencies>
@@ -58,7 +60,7 @@
 				<version>2.18.1</version>
 				<configuration>
 					<suiteXmlFiles>
-						 <suiteXmlFile>testng_documents/testng_yahoo_testall chrome.xml</suiteXmlFile>
+						 <suiteXmlFile>testng_documents/testng_xbox_testall chrome.xml</suiteXmlFile>
 					</suiteXmlFiles>
 				</configuration>				
 			</plugin>
